--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Grimble" />
+    <meta property="og:description" content="welcome to the grimble" />
+    <meta property="og:url" content="https://www.grimble.world/" /> 
     <title>Grimble</title>
   </head>
   <body>
