--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Grimble" />
     <meta property="og:description" content="welcome to the grimble" />
-    <meta property="og:url" content="https://www.grimble.world/" /> 
+    <meta property="og:url" content="https://www.grimble.world" />
+    <meta property="og:image" content="/favicon.jpg" />
     <title>Grimble</title>
   </head>
   <body>
