--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/IMG_4117.JPEG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Grimble" />
+    <meta property="og:title" content="Varn" />
     <meta property="og:description" content="welcome to the grimble" />
     <meta property="og:url" content="https://www.grimble.world" />
     <meta property="og:image" content="/favicon.jpg" />
-    <title>Grimble</title>
+    <title>Varn</title>
   </head>
   <body>
     <div id="root"></div>
