--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/IMG_4117.JPEG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Varn" />
-    <meta property="og:description" content="welcome to the grimble" />
+    <meta property="og:description" content="welcome to Varn's world" />
     <meta property="og:url" content="https://www.grimble.world" />
-    <meta property="og:image" content="/favicon.jpg" />
+    <meta property="og:image" content="/IMG_4117.jpg" />
     <title>Varn</title>
   </head>
   <body>
