--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Varn" />
     <meta property="og:description" content="welcome to Varn's world" />
     <meta property="og:url" content="https://varn.world" />
-    <meta property="og:image" content="/IMG_4117.jpg" />
+    <meta property="og:image" content="/IMG_4117.JPEG" />
     <title>Varn</title>
   </head>
   <body>
