--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Varn" />
     <meta property="og:description" content="welcome to Varn's world" />
-    <meta property="og:url" content="https://varn.world" />
+    <meta property="og:url" content="https://varn.world/" />
     <meta property="og:image" content="/IMG_4117.JPEG" />
     <title>Varn</title>
   </head>
