--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/IMG_4117.JPEG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Varn" />
-    <meta property="og:description" content="Welcome to Varn's World. Anything he says goes. $Varn" />
+    <meta property="og:description" content="Welcome to Varn's World./>
     <meta property="og:url" content="https://varn.world/" />
     <meta property="og:image" content="/IMG_4117.JPEG" />
     <title>Varn</title>
