--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:url" content="https://varn.world/" />
     <meta property="og:image" content="/IMG_4117.JPEG" />
     <title>Varn</title>
+    <link rel="preload" as="video" href="/ascii.mp4" type="video/mp4">
   </head>
   <body>
     <div id="root"></div>
