--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/IMG_4117.JPEG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Varn" />
-    <meta property="og:description" content="Welcome to Varn's World."/>
-    <meta property="og:url" content="https://varn.world/" />
-    <meta property="og:image" content="/IMG_4117.JPEG" />
-    <title>Varn</title>
+    <meta property="og:title" content="rAIne" />
+    <meta property="og:description" content=""/>
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="/" />
+    <title>rAIne</title>
   </head>
   <body>
     <div id="root"></div>
