--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/jpeg" href="/raine.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="rAIne" />
     <meta property="og:description" content=""/>
     <meta property="og:url" content="" />
-    <meta property="og:image" content="/" />
+    <meta property="og:image" content="/raine.jpg" />
     <title>rAIne</title>
   </head>
   <body>
