--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="/raine.jpg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="rAIne" />
+    <meta property="og:title" content="Santa" />
     <meta property="og:description" content=""/>
     <meta property="og:url" content="" />
     <meta property="og:image" content="/raine.jpg" />
-    <title>rAIne</title>
+    <title>Santa</title>
   </head>
   <body>
     <div id="root"></div>
