--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/raine.jpg" />
+    <link rel="icon" type="image/jpeg" href="/santa.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Santa" />
     <meta property="og:description" content=""/>
     <meta property="og:url" content="" />
-    <meta property="og:image" content="/raine.jpg" />
+    <meta property="og:image" content="/santa.jpg" />
     <title>Santa</title>
   </head>
   <body>
