--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Santa" />
+    <meta property="og:title" content="Frosty" />
     <meta property="og:description" content=""/>
     <meta property="og:url" content="" />
     <meta property="og:image" content="/santa.jpg" />
-    <title>Santa</title>
+    <title>Frosty</title>
   </head>
   <body>
     <div id="root"></div>
